--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Digionline cokkie extractor for kodi",
+  "name": "Digionline cookie extractor for kodi",
   "description": "This extension will extract cookies and setup digionline kodi addon",
   "version": "1.0",
 
